Fixed up spacing in a few areas

--- a/css/site.sass
+++ b/css/site.sass
@@ -36,7 +36,6 @@ body > header
     text-align: center
 
     div.logo
-      margin-bottom: 0
 
       svg
         display: none
@@ -61,7 +60,6 @@ body > section#content
 
 body > footer
   border-top: 1px $light-grey solid
-  margin-top: 2em
   padding-top: 1em
   padding-bottom: 2em
   text-align: center
@@ -85,9 +83,6 @@ body > section#content
 
 #recent-activity
   +split
-
-  h2
-    // text-align: center
 
   #posts
     article.post-stub
@@ -152,7 +147,6 @@ article.post
 
   img
     margin-top: $base-line-height
-    margin-bottom: $base-line-height
 
 // Projects page
 
